@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-11T08:19:30Z",
-  "count_outdated" : 510,
-  "uniques_outdated" : 295,
+  "timestamp" : "2022-09-11T16:21:47Z",
+  "count_outdated" : 511,
+  "uniques_outdated" : 296,
   "count" : 538,
   "uniques" : 311,
   "clones" : [
-    {
-      "timestamp": "2022-08-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-29T00:00:00Z",
       "count": 2,
