@@ -1,12 +1,7 @@
 {
-  "count": 28,
+  "count": 27,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-08-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-29T00:00:00Z",
       "count": 2,
