@@ -1,3 +1,11 @@
+2022-09-11T16:21:47Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3032511656
+* notice: last 14d: unq all: 5 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 295 510 / 311 538
+* notice: next accum: outdated-unq outdated-all / unq all: 296 511 / 311 538
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-28] / []
+
 2022-09-11T08:19:30Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3031099039
 * notice: last 14d: unq all: 5 28
